test/StringProcessing/Sema/regex_builder_fix_import_decl.code
// RUN: %target-typecheck-verify-language -enable-bare-slash-regex -disable-availability-checking

// REQUIRES: language_language_parser

struct S {
  fn foo() {
    Regex { // expected-error {{regex builder requires the 'RegexBuilder' module be imported'}} {{5:1-1=import RegexBuilder\n\n}}
      /abc/
    }
  }
}
